[gd_scene load_steps=20 format=3 uid="uid://c4guxp2t8rcio"]

[ext_resource type="Script" path="res://scripts/World.gd" id="1_gmu0c"]
[ext_resource type="Texture2D" uid="uid://dgpprudxq3e5o" path="res://assets/map/path.png" id="2_j6w7t"]
[ext_resource type="Texture2D" uid="uid://b57xlv8r6uowd" path="res://assets/map/grass.png" id="4_7ifso"]
[ext_resource type="Texture2D" uid="uid://b5qrsqic15hh7" path="res://assets/UIBackground (3).png" id="5_1nui6"]
[ext_resource type="Texture2D" uid="uid://bvu5rhs2knemn" path="res://assets/map/no_build.png" id="5_2eclw"]
[ext_resource type="Script" path="res://scripts/UI.gd" id="6_10y7h"]
[ext_resource type="Script" path="res://scripts/money_label.gd" id="7_cexi4"]
[ext_resource type="Texture2D" uid="uid://dj5obg17eix8q" path="res://assets/defenses/Turret1.png" id="7_d6x8h"]
[ext_resource type="Texture2D" uid="uid://htxvgyc4qc8m" path="res://assets/defenses/Turret2.png" id="8_ouqwp"]
[ext_resource type="Script" path="res://scripts/PlayerLevel.gd" id="9_movcb"]
[ext_resource type="Script" path="res://scripts/health_label.gd" id="9_rkryu"]
[ext_resource type="Script" path="res://scripts/XPBar.gd" id="11_40etu"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_s7yxs"]
texture = ExtResource("2_j6w7t")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0
0:0/0/terrain_set = 0
0:0/0/terrain = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
0:0/0/terrains_peering_bit/right_side = 0
0:0/0/terrains_peering_bit/left_side = 0
1:0/0 = 0
1:0/0/terrain_set = 0
1:0/0/terrain = 0
1:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:0/0/physics_layer_0/angular_velocity = 0.0
1:0/0/terrains_peering_bit/bottom_side = 0
1:0/0/terrains_peering_bit/top_side = 0
0:1/0 = 0
0:1/0/terrain_set = 0
0:1/0/terrain = 0
0:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:1/0/physics_layer_0/angular_velocity = 0.0
0:1/0/terrains_peering_bit/left_side = 0
0:1/0/terrains_peering_bit/top_left_corner = 0
0:1/0/terrains_peering_bit/top_side = 0
1:1/0 = 0
1:1/0/terrain_set = 0
1:1/0/terrain = 0
1:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:1/0/physics_layer_0/angular_velocity = 0.0
1:1/0/terrains_peering_bit/right_side = 0
1:1/0/terrains_peering_bit/bottom_right_corner = 0
1:1/0/terrains_peering_bit/bottom_side = 0
0:2/0 = 0
0:2/0/terrain_set = 0
0:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:2/0/physics_layer_0/angular_velocity = 0.0
2:0/0 = 0
2:0/0/terrain_set = 0
2:0/0/terrain = 0
2:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:0/0/physics_layer_0/angular_velocity = 0.0
2:0/0/terrains_peering_bit/bottom_side = 0
2:0/0/terrains_peering_bit/bottom_left_corner = 0
2:0/0/terrains_peering_bit/left_side = 0
2:1/0 = 0
2:1/0/terrain_set = 0
2:1/0/terrain = 0
2:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:1/0/physics_layer_0/angular_velocity = 0.0
2:1/0/terrains_peering_bit/right_side = 0
2:1/0/terrains_peering_bit/top_side = 0
2:1/0/terrains_peering_bit/top_right_corner = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_rixjp"]
texture = ExtResource("5_2eclw")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
0:0/0/terrain_set = 0
0:0/0/terrain = 2
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_q46qh"]
texture = ExtResource("4_7ifso")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0
0:0/0/terrain_set = 0
0:0/0/terrain = 1
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
1:0/0 = 0
1:0/0/terrain_set = 0
1:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:0/0/physics_layer_0/angular_velocity = 0.0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_jjqeh"]
texture = ExtResource("5_1nui6")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
1:0/0 = 0
1:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:0/0/physics_layer_0/angular_velocity = 0.0
2:0/0 = 0
2:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:0/0/physics_layer_0/angular_velocity = 0.0
0:1/0 = 0
0:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:1/0/physics_layer_0/angular_velocity = 0.0
1:1/0 = 0
1:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:1/0/physics_layer_0/angular_velocity = 0.0
2:1/0 = 0
2:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:1/0/physics_layer_0/angular_velocity = 0.0
0:2/0 = 0
0:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:2/0/physics_layer_0/angular_velocity = 0.0
1:2/0 = 0
1:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:2/0/physics_layer_0/angular_velocity = 0.0
2:2/0 = 0
2:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:2/0/physics_layer_0/angular_velocity = 0.0
0:3/0 = 0
0:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:3/0/physics_layer_0/angular_velocity = 0.0
1:3/0 = 0
1:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:3/0/physics_layer_0/angular_velocity = 0.0
2:3/0 = 0
2:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:3/0/physics_layer_0/angular_velocity = 0.0

[sub_resource type="TileSet" id="TileSet_4e3mh"]
tile_size = Vector2i(64, 64)
physics_layer_0/collision_layer = 1
terrain_set_0/mode = 0
terrain_set_0/terrain_0/name = "Path"
terrain_set_0/terrain_0/color = Color(0.705882, 0, 0.34902, 1)
terrain_set_0/terrain_1/name = "Grass"
terrain_set_0/terrain_1/color = Color(0.5, 0.4375, 0.25, 1)
terrain_set_0/terrain_2/name = "NoBuild"
terrain_set_0/terrain_2/color = Color(1, 0.501961, 0.25098, 1)
sources/3 = SubResource("TileSetAtlasSource_rixjp")
sources/5 = SubResource("TileSetAtlasSource_q46qh")
sources/0 = SubResource("TileSetAtlasSource_s7yxs")
sources/6 = SubResource("TileSetAtlasSource_jjqeh")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4jl3l"]
bg_color = Color(0.776471, 0.862745, 1, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ldiex"]
bg_color = Color(0.639216, 0.0509804, 0.556863, 1)
border_width_left = 1
border_width_top = 1
border_width_bottom = 1
border_color = Color(0, 0, 0, 1)
border_blend = true

[node name="World" type="Node2D"]
script = ExtResource("1_gmu0c")

[node name="Path" type="TileMap" parent="."]
tile_set = SubResource("TileSet_4e3mh")
rendering_quadrant_size = 32
format = 2
layer_0/name = "Main"
layer_0/tile_data = PackedInt32Array(917525, 5, 0, 917524, 5, 0, 917523, 5, 0, 917522, 5, 0, 917521, 5, 0, 917520, 5, 0, 917519, 5, 0, 917518, 5, 0, 917517, 5, 0, 917516, 5, 0, 917515, 5, 0, 917513, 5, 0, 917512, 5, 0, 917511, 5, 0, 917510, 5, 0, 917509, 5, 0, 917508, 5, 0, 917507, 5, 0, 917506, 5, 0, 917505, 5, 0, 917504, 5, 0, 851968, 5, 0, 786432, 5, 0, 720896, 5, 0, 720917, 5, 0, 786453, 5, 0, 851989, 5, 0, 851988, 5, 0, 851987, 5, 0, 851986, 5, 0, 851985, 5, 0, 851984, 5, 0, 851983, 5, 0, 851982, 5, 0, 851981, 5, 0, 851980, 5, 0, 851979, 5, 0, 851977, 5, 0, 851976, 5, 0, 851975, 5, 0, 851974, 5, 0, 851973, 5, 0, 851972, 5, 0, 851971, 5, 0, 851970, 5, 0, 851969, 5, 0, 786433, 5, 0, 720897, 5, 0, 720910, 5, 0, 720909, 5, 0, 720908, 5, 0, 720907, 5, 0, 720905, 5, 0, 720904, 5, 0, 720903, 5, 0, 720902, 5, 0, 720901, 5, 0, 720900, 5, 0, 720899, 5, 0, 720898, 5, 0, 786435, 5, 0, 786436, 5, 0, 786437, 5, 0, 786438, 5, 0, 786439, 5, 0, 786440, 5, 0, 786441, 5, 0, 786443, 5, 0, 786444, 5, 0, 786445, 5, 0, 786446, 5, 0, 786447, 5, 0, 786448, 5, 0, 786449, 5, 0, 786450, 5, 0, 786451, 5, 0, 786452, 5, 0, 720916, 5, 0, 720915, 5, 0, 720914, 5, 0, 720913, 5, 0, 720912, 5, 0, 786434, 5, 0, 720911, 5, 0, 917514, 5, 0, 851978, 5, 0, 786442, 5, 0, 720906, 5, 0)
layer_1/name = "InventoryBackground"
layer_1/tile_data = PackedInt32Array(917504, 131078, 3, 917505, 65542, 3, 917506, 6, 3, 786442, 65542, 0, 786443, 65542, 0, 851978, 131078, 1, 851979, 131078, 1, 851989, 131078, 0, 917525, 65542, 1, 917524, 131078, 1, 917523, 6, 2, 851988, 65542, 0, 851987, 6, 0, 786444, 131078, 0, 851980, 65542, 1, 786441, 6, 0, 851977, 6, 2)

[node name="UI" type="CanvasLayer" parent="."]
script = ExtResource("6_10y7h")

[node name="HUD" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme_type_variation = &"Font"

[node name="ButtonBar" type="VBoxContainer" parent="UI/HUD"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 7.0
offset_top = -57.0
offset_right = 191.0
offset_bottom = -1.0
grow_vertical = 0
scale = Vector2(0.75, 0.75)
alignment = 1
metadata/_edit_use_anchors_ = true

[node name="NewPath" type="Button" parent="UI/HUD/ButtonBar"]
layout_mode = 2
text = "Generate new path"

[node name="SpawnEnemy" type="Button" parent="UI/HUD/ButtonBar"]
layout_mode = 2
text = "Spawn enemy"

[node name="BuildBar" type="VBoxContainer" parent="UI/HUD"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -57.0
offset_top = -123.0
grow_horizontal = 0
grow_vertical = 0

[node name="Turret2" type="TextureButton" parent="UI/HUD/BuildBar" groups=["build_buttons"]]
layout_mode = 2
texture_normal = ExtResource("8_ouqwp")

[node name="Turret1" type="TextureButton" parent="UI/HUD/BuildBar" groups=["build_buttons"]]
layout_mode = 2
texture_normal = ExtResource("7_d6x8h")

[node name="PlayerInfo" type="VBoxContainer" parent="UI/HUD"]
clip_contents = true
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -117.0
offset_top = -190.0
offset_right = 118.0
offset_bottom = -89.0
grow_horizontal = 2
grow_vertical = 0

[node name="CurrentWave" type="Label" parent="UI/HUD/PlayerInfo"]
layout_mode = 2
theme_override_constants/shadow_outline_size = 36
theme_override_font_sizes/font_size = 30
text = "Wave:"

[node name="PlayerLevel" type="Label" parent="UI/HUD/PlayerInfo"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Player level:"
script = ExtResource("9_movcb")

[node name="Health" type="Label" parent="UI/HUD/PlayerInfo"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Health:"
script = ExtResource("9_rkryu")

[node name="Money" type="Label" parent="UI/HUD/PlayerInfo"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Money:"
script = ExtResource("7_cexi4")

[node name="XPBar" type="ProgressBar" parent="UI/HUD"]
layout_mode = 0
offset_left = 608.0
offset_top = 741.0
offset_right = 800.0
offset_bottom = 763.0
tooltip_text = "Test"
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_styles/background = SubResource("StyleBoxFlat_4jl3l")
theme_override_styles/fill = SubResource("StyleBoxFlat_ldiex")
value = 50.0
script = ExtResource("11_40etu")

[node name="Turrets" type="Node2D" parent="."]
